[package]
name = "mpdnd"
version = "1.0.4"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
description = "A notification daemon for MPD."
homepage = "https://github.com/Dophin2009/mpdnd"
repository = "https://github.com/Dophin2009/mpdnd.git"
license = "MIT"
edition = "2018"

[package.metadata]
msrv = "1.54.0"

[dependencies]
anyhow = "1.0.33"
chrono = "0.4.19"
clap = { version = "3.0", features = ["cargo", "derive"]}
futures = "0.3"
mpd_client = "0.6.0"
notify-rust = "4"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.0.0"
tokio = { version = "1.1.1", features = ["rt", "net", "sync", "macros"] }
toml = "0.5.7"
xdg = "2.1"
