[package]
name = "mpdnd"
version = "1.0.4"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
description = "A notification daemon for MPD."
homepage = "https://github.com/mirryi/mpdnd"
repository = "https://github.com/mirryi/mpdnd.git"
license = "MIT"
edition = "2018"

[package.metadata]
msrv = "1.54.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["cargo", "derive"] }
futures = "0.3"
mpd_client = "0.7"
notify-rust = "4.5"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.1"
tokio = { version = "1.19", features = ["rt", "net", "sync", "macros"] }
toml = "0.5"
xdg = "2.4"
